--- a/api_agendamento/package.json
+++ b/api_agendamento/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "aula2",
+  "name": "api_agendamento",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
+  "main": "dist/index.js",
+  "engines": { "node": ">=18" },
   "scripts": {
-    "dev": "npx ts-node-dev --respawn index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only index.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/index.js",
+    "postinstall": "prisma generate",
+    "migrate:deploy": "prisma migrate deploy || prisma db push"
   },
   "keywords": [],
   "author": "",
