--- a/api_agendamento/package.json
+++ b/api_agendamento/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "main": "dist/index.js",
-  "engines": { "node": ">=18" },
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only index.ts",
     "build": "tsc -p tsconfig.json",
@@ -23,14 +25,14 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^22.5.0",
     "@types/nodemailer": "^6.4.17",
-    "prisma": "^6.5.0",
+    "prisma": "^6.15.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.873.0",
     "@aws-sdk/s3-request-presigner": "^3.873.0",
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.15.0",
     "@types/cors": "^2.8.17",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
