--- a/api_agendamento/package.json
+++ b/api_agendamento/package.json
@@ -27,6 +27,7 @@
     "@types/nodemailer": "^6.4.17",
     "prisma": "^6.15.0",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
